virt01/manual/mail/snappymail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snappymail-ext-ingress
  namespace: mail
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: ipv4.nforcer.com
spec:
  ingressClassName: traefik
  rules:
  - host: mail.nforcer.com
    http:
      paths:
      - backend:
          service:
            name: snappymail-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mail.nforcer.com
    secretName: snappymail-ext-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snappymail-int-ingress
  namespace: mail
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: mail.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: snappymail-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mail.k3s.nf.lab
    - mail.nf.lab
    secretName: snappymail-int-tls
